Remove code for feedback linearization controller, add functions for q_start and q_des

--- a/Kian_code/Controllers/collocated_naive.ipynb
+++ b/Kian_code/Controllers/collocated_naive.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "\n",
     "model_cw = False\n",
-    "model = autoencoders.Analytic_transformer(rp)"
+    "model_ana = autoencoders.Analytic_transformer(rp)"
    ]
   },
   {
@@ -67,63 +67,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_RxRy(q, q_d):\n",
-    "\tRx = rp[\"xa\"] - rp[\"l0\"] * torch.cos(q[0]) - rp[\"l1\"] * torch.cos(q[1])\n",
-    "\tRy = rp[\"ya\"] - rp[\"l0\"] * torch.sin(q[0]) - rp[\"l1\"] * torch.sin(q[1])\n",
-    "\treturn Rx, Ry\n",
+    "def desired_conditions(xy_des):\n",
+    "\tq_des = transforms.inverse_kinematics(xy_des, rp, is_clockwise=model_cw).unsqueeze(0)\n",
+    "\tq_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
-    "def calculate_RxRyDot(q, q_d):\n",
-    "\tRxDot = rp[\"l0\"] * torch.sin(q[0]) * q_d[0] + rp[\"l1\"] * torch.sin(q[1]) * q_d[1]\n",
-    "\tRyDot = -rp[\"l0\"] * torch.cos(q[0]) * q_d[0] - rp[\"l1\"] * torch.cos(q[1]) * q_d[1]\n",
-    "\treturn RxDot, RyDot\n",
-    "\t\n",
-    "def calculate_RxRyDDot(q, q_d, q_dd_active, q_dd_passive):\n",
-    "\tRxDDot_passive = (rp[\"l0\"] * torch.cos(q[0]) * q_d[0]**2 + rp[\"l0\"] * torch.sin(q[0]) * q_dd_passive[0] + \n",
-    "\t\t\t\t\t  rp[\"l1\"] * torch.cos(q[1]) * q_d[1]**2 + rp[\"l1\"] * torch.sin(q[1]) * q_dd_passive[1])\n",
-    "\tRxDDot_active = rp[\"l0\"] * torch.sin(q[0]) * q_dd_active[0] + rp[\"l1\"] * torch.sin(q[1]) * q_dd_active[1]\n",
+    "\tis_clockwise_des = transforms.check_clockwise(q_des.squeeze(0))\n",
     "\n",
-    "\tRyDDot_passive = (rp[\"l0\"] * torch.sin(q[0]) * q_d[0]**2 - rp[\"l0\"] * torch.cos(q[0]) * q_dd_passive[0] + \n",
-    "\t\t\t\t\t  rp[\"l1\"] * torch.sin(q[1]) * q_d[1]**2 - rp[\"l1\"] * torch.cos(q[1]) * q_dd_passive[1])\n",
-    "\tRyDDot_active = - rp[\"l0\"] * torch.cos(q[0]) * q_dd_active[0] - rp[\"l1\"] * torch.cos(q[1]) * q_dd_active[1]\n",
+    "\tth_des_ana = model_ana.encoder_vmap(q_des)\n",
+    "\tth_d_des_ana = (model_ana.jacobian_enc(q_des) @ q_d_des.T).T\n",
     "\n",
-    "\treturn RxDDot_passive, RxDDot_active, RyDDot_passive, RyDDot_active\n",
+    "\tprint(\"th_des_ana:\", th_des_ana.detach().cpu().numpy()[0])\n",
     "\n",
-    "def calculate_N(Rx, Ry, RxDot, RyDot):\n",
-    "\tN = Rx * RxDot + Ry * RyDot\n",
-    "\treturn N\n",
-    "\n",
-    "def calculate_y(Rx, Ry):\n",
-    "\ty = torch.sqrt(Rx**2 + Ry**2)\n",
-    "\treturn y\n",
-    "\n",
-    "def calculate_yDot(y, N):\n",
-    "\tyDot = 1/y * N\n",
-    "\treturn yDot\n",
-    "\n",
-    "def calculate_Y(Rx, Ry, N):\n",
-    "\ty = calculate_y(Rx, Ry)\n",
-    "\ty_d = calculate_yDot(y, N)\n",
-    "\tY = torch.tensor([[y], [y_d]]).to(device)\n",
-    "\treturn Y\n",
-    "\n",
-    "def calculate_alpha(y, N, Rx, Ry, RxDot, RyDot, RxDDot_passive, RyDDot_passive):\n",
-    "\talpha = -N**2/(y**3) + (1/y)*(RxDot**2 + RyDot**2 + Rx * RxDDot_passive + Ry * RyDDot_passive)\n",
-    "\treturn alpha\n",
-    "\n",
-    "def calculate_beta(y, Rx, Ry, RxDDot_active, RyDDot_active):\n",
-    "\tbeta = (1/y) * (Rx * RxDDot_active + Ry * RyDDot_active)\n",
-    "\treturn beta\n",
-    "\n",
-    "def calculate_v(Y_des, Y, K):\n",
-    "\tv = K @ (Y_des - Y)\n",
-    "\treturn v\n",
-    "\n",
-    "def calculate_u(v, alpha, beta):\n",
-    "\tu = (1/beta) * (-alpha + v)\n",
-    "\treturn u\n",
-    "\n",
-    "\n",
-    "\n"
+    "\treturn (q_des, q_d_des, is_clockwise_des, th_des_ana, th_d_des_ana)"
    ]
   },
   {
@@ -132,33 +87,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def start_conditions(xy_start):\n",
+    "\tq_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
+    "\tq_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
+    "\tq_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
+    "\n",
+    "\tis_clockwise_start = transforms.check_clockwise(q_start.squeeze(0))\n",
+    "\n",
+    "\tth_start_ana = model_ana.encoder_vmap(q_start)\n",
+    "\tth_d_start_ana = (model_ana.jacobian_enc(q_start) @ q_d_start.T).T\n",
+    "\n",
+    "\n",
+    "\tprint(\"th_start_ana:\", th_start_ana.detach().cpu().numpy()[0])\n",
+    "\n",
+    "\treturn (q_start, q_d_start, q_dd_start, is_clockwise_start, th_start_ana, th_d_start_ana)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xy_des = torch.tensor([2., -2.]).requires_grad_().to(device)\n",
     "xy_start = torch.tensor([0., -4.]).requires_grad_().to(device)\n",
-    "q_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
-    "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
-    "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
-    "\n",
-    "is_clockwise_start = transforms.check_clockwise(q_start.squeeze(0))\n",
-    "\n",
-    "xy_des_real = torch.tensor([2., -2.]).requires_grad_().to(device)\n",
-    "q_des = transforms.inverse_kinematics(xy_des_real, rp, is_clockwise=model_cw).unsqueeze(0)\n",
-    "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
-    "Rx_des, Ry_des = calculate_RxRy(q_des.squeeze(0), q_d_des.squeeze(0))\n",
-    "RxDot_des, RyDot_des = calculate_RxRyDot(q_des.squeeze(0), q_d_des.squeeze(0))\n",
-    "N_des = calculate_N(Rx_des, Ry_des, RxDot_des, RyDot_des)\n",
-    "Y_des = calculate_Y(Rx_des, Ry_des, N_des)\n",
     "\n",
     "\n",
-    "th_start = model.encoder_vmap(q_start)\n",
-    "th_d_start = (model.jacobian_enc(q_start) @ q_d_start.T).T\n",
+    "q_des, q_d_des, is_clockwise_des, th_des_ana, th_d_des_ana = desired_conditions(xy_des)\n",
+    "q_start, q_d_start, q_dd_start, is_clockwise_start, th_start_ana, th_d_start_ana = start_conditions(xy_start)\n",
     "\n",
-    "is_clockwise_des = transforms.check_clockwise(q_des.squeeze(0))\n",
     "\n",
-    "th_des = model.encoder_vmap(q_des)\n",
-    "th_d_des = (model.jacobian_enc(q_des) @ q_d_des.T).T\n",
-    "\n",
-    "q_des_est = model.decoder_vmap(th_des, is_clockwise_des)\n",
-    "q_d_des_est = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
+    "q_des_est = model_ana.decoder_vmap(th_des_ana, is_clockwise_des)\n",
+    "q_d_des_est = (model_ana.jacobian_dec(th_des_ana, clockwise=is_clockwise_des) @ th_d_des_ana.T).T\n",
     "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_q_des_equilibrium(rp: dict, q_des, max_iter: int = 100, tol: float = 1e-6):\n",
+    "    \"\"\"\n",
+    "    Finds q_eq by minimizing the residual norm ||r(q)||^2 via LBFGS.\n",
+    "    Args:\n",
+    "        rp: robot parameter dict\n",
+    "        q_des: initial guess tensor of shape (2,), dtype=torch.float\n",
+    "        max_iter: maximum LBFGS iterations\n",
+    "        tol: tolerance on residual norm\n",
+    "    Returns:\n",
+    "        q_eq: equilibrium joint angles as tensor (2,)\n",
+    "    \"\"\"\n",
+    "    # initialize q with gradient\n",
+    "    q = q_des.clone().detach().requires_grad_(True)\n",
+    "    # LBFGS optimizer works better with a list of parameters\n",
+    "    optimizer = torch.optim.LBFGS([q], max_iter=max_iter, tolerance_grad=tol, tolerance_change=tol)\n",
+    "\n",
+    "    def closure():\n",
+    "        optimizer.zero_grad()\n",
+    "        # compute dynamics\n",
+    "        M_q, C_q, G_q = dynamics.dynamical_matrices(rp, q, torch.zeros_like(q))\n",
+    "        A_q = dynamics.input_matrix(rp, q)\n",
+    "        # compute best-fit u_ff\n",
+    "        u_ff = (A_q.T @ G_q) / (A_q.T @ A_q)\n",
+    "        # residual r = G - A u_ff\n",
+    "        r = G_q - A_q * u_ff\n",
+    "        loss = (r**2).sum()\n",
+    "        loss.backward()\n",
+    "        return loss\n",
+    "\n",
+    "    optimizer.step(closure)\n",
+    "    return q.detach()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find equilibrium\n",
+    "q_eq = find_q_des_equilibrium(rp, q_des.squeeze(0)).unsqueeze(0)\n",
+    "print(\"Desired q: \", q_des.detach().cpu().numpy())\n",
+    "print(\"Equilibrium q:\", q_eq.cpu().numpy())\n",
+    "\n",
+    "# Compute u_ff at equilibrium\n",
+    "M_eq, C_eq, G_eq = dynamics.dynamical_matrices(rp, q_eq.squeeze(0), torch.zeros(2))\n",
+    "A_eq = dynamics.input_matrix(rp, q_eq.squeeze(0))\n",
+    "u_ff_eq = (A_eq.T @ G_eq) / (A_eq.T @ A_eq)\n",
+    "print(f\"Feedforward torque u_ff at equilibrium: {u_ff_eq.item():.4f}\")"
    ]
   },
   {
