Small changes to plotting, remove xy plot

--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -25,6 +25,11 @@
     "\n",
     "import Plotting.pendulum_plot as pendulum_plot\n",
     "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['font.family']   = 'serif'\n",
+    "matplotlib.rcParams['font.serif']    = ['Times New Roman']\n",
+    "matplotlib.rcParams['mathtext.fontset'] = 'dejavuserif'\n",
+    "\n",
     "from datetime import datetime\n",
     "\n",
     "%load_ext autoreload\n",
@@ -769,15 +774,15 @@
    "source": [
     "datasets_q = [\n",
     "\t{\n",
-    "\t    \"name\": \"qsim\",\n",
+    "\t    \"name\": \"trajectory\",\n",
     "\t    \"values\": q_series_qsim.cpu().detach().numpy(),\n",
     "\t    \"color\": \"tab:orange\"\n",
     "\t},\n",
-    "\t{\n",
-    "\t\t\"name\": \"thsim\",\n",
-    "\t\t\"values\": q_series_thsim.cpu().detach().numpy(),\n",
-    "\t\t\"color\": \"tab:blue\"\n",
-    "\t}#,\n",
+    "\t#{\n",
+    "\t#\t\"name\": \"thsim\",\n",
+    "\t#\t\"values\": q_series_thsim.cpu().detach().numpy(),\n",
+    "\t#\t\"color\": \"tab:blue\"\n",
+    "\t#}#,\n",
     "\t#{\n",
     "\t#    \"name\": \"naive\",\n",
     "\t#    \"values\": q_naive_series.cpu().detach().numpy(),\n",
@@ -787,29 +792,29 @@
     "\n",
     "datasets_th = [\n",
     "\t{\n",
-    "\t\t\"name\": \"qsim\",\n",
+    "\t\t\"name\": \"trajectory\",\n",
     "\t\t\"values\": th_series_qsim.cpu().detach().numpy(),\n",
     "\t\t\"color\": \"tab:orange\"\n",
     "\t},\n",
-    "\t{\n",
-    "\t    \"name\": \"thsim\",\n",
-    "\t    \"values\": th_series_thsim.cpu().detach().numpy(),\n",
-    "\t    \"color\": \"tab:blue\"\n",
-    "\t}\n",
+    "\t#{\n",
+    "\t#    \"name\": \"thsim\",\n",
+    "\t#    \"values\": th_series_thsim.cpu().detach().numpy(),\n",
+    "\t#    \"color\": \"tab:blue\"\n",
+    "\t#}\n",
     "]\n",
     "\n",
     "\n",
     "datasets_xy = [\n",
     "\t{\n",
-    "\t    \"name\": \"qsim\",\n",
+    "\t    \"name\": \"trajectory\",\n",
     "\t    \"values\": xy_real_series_qsim.cpu().detach().numpy(),\n",
     "\t    \"color\": \"tab:orange\"\n",
     "\t},\n",
-    "\t{\n",
-    "\t\t\"name\": \"thsim\",\n",
-    "\t\t\"values\": xy_real_series_qsim.cpu().detach().numpy(),\n",
-    "\t\t\"color\": \"tab:blue\"\n",
-    "\t}#,\n",
+    "\t#{\n",
+    "\t#\t\"name\": \"thsim\",\n",
+    "\t#\t\"values\": xy_real_series_qsim.cpu().detach().numpy(),\n",
+    "\t#\t\"color\": \"tab:blue\"\n",
+    "\t#}#,\n",
     "\t#{\n",
     "\t#    \"name\": \"naive\",\n",
     "\t#    \"values\": xy_naive_series.cpu().detach().numpy(),\n",
@@ -818,9 +823,9 @@
     "]\n",
     "\n",
     "# Common labels for the plots.\n",
-    "name_q = \"q trajectory\"\n",
-    "name_th = \"th trajectory\"\n",
-    "name_xy = \"xy trajectory\"\n",
+    "name_q = r\"${q}$\" + \"-space trajectory\"\n",
+    "name_th = r\"${\\theta}$\" + \"-space trajectory\"\n",
+    "name_xy = r\"${(x,y)}$\" + \"-space trajectory\"\n",
     "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "# Create an instance of ErrorPlotter.\n",
@@ -831,7 +836,7 @@
     "column1 = ep.create_plot_dataset(t=t_series, datasets=datasets_q, reference=q_des, name=name_q)\n",
     "column2 = ep.create_plot_dataset(t=t_series, datasets=datasets_th, reference=th_des, name=name_th)\n",
     "column3 = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=xy_des_real.unsqueeze(0), name=name_xy)\n",
-    "plot_datasets = [column1, column2, column3]\n",
+    "plot_datasets = [column1, column2]#, column3]\n",
     "\n",
     "file_name = \"Error plot.png\"\n",
     "file_counter = 0\n",
@@ -839,7 +844,7 @@
     "output_path = os.path.join(save_dir, file_name)\n",
     "\n",
     "# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
-    "ep.plot_multi(plot_datasets=plot_datasets, save_path=output_path, axes_names = [\"q\", \"th\", \"xy\"])"
+    "ep.plot_multi(plot_datasets=plot_datasets, save_path=output_path, axes_names = [[r\"$q_0$\", r\"$q_1$\"], [r\"$\\theta_0$\", r\"$\\theta_1$\"], [r\"$x$\", r\"$y$\"]])"
    ]
   },
   {
