detach alpha beta to preserve memory

--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -487,8 +487,8 @@
     "\tv_series_thsim = torch.cat((v_series_thsim, v.detach()), dim=0)\n",
     "\tu_series_thsim = torch.cat((u_series_thsim, u.detach()), dim=0)\n",
     "\tY_series_thsim = torch.cat((Y_series_thsim, Y.detach().T))\n",
-    "\talpha_beta_series_thsim = torch.cat((alpha_beta_series_thsim, torch.tensor([[alpha, beta]]).to(device)))\n",
-    "\talpha_beta_true_series_thsim = torch.cat((alpha_beta_true_series_thsim, torch.tensor([[alpha_true, beta_true]]).to(device)))\n",
+    "\talpha_beta_series_thsim = torch.cat((alpha_beta_series_thsim, torch.tensor([[alpha.detach(), beta.detach()]]).to(device)))\n",
+    "\talpha_beta_true_series_thsim = torch.cat((alpha_beta_true_series_thsim, torch.tensor([[alpha_true.detach(), beta_true.detach()]]).to(device)))\n",
     "\t#print(\"\")\n",
     "\n",
     "\tif torch.isnan(th[0,0]):\n",
@@ -634,8 +634,8 @@
     "\tv_series_qsim = torch.cat((v_series_qsim, v.detach()), dim=0)\n",
     "\tu_series_qsim = torch.cat((u_series_qsim, u.detach()), dim=0)\n",
     "\tY_series_qsim = torch.cat((Y_series_qsim, Y.detach().T))\n",
-    "\talpha_beta_series_qsim = torch.cat((alpha_beta_series_qsim, torch.tensor([[alpha, beta]]).to(device)))\n",
-    "\talpha_beta_true_series_qsim = torch.cat((alpha_beta_true_series_qsim, torch.tensor([[alpha_true, beta_true]]).to(device)))\n",
+    "\talpha_beta_series_qsim = torch.cat((alpha_beta_series_qsim, torch.tensor([[alpha.detach(), beta.detach()]]).to(device)))\n",
+    "\talpha_beta_true_series_qsim = torch.cat((alpha_beta_true_series_qsim, torch.tensor([[alpha_true.detach(), beta_true.detach()]]).to(device)))\n",
     "\t#print(\"\")\n",
     "\n",
     "\tif torch.isnan(th[0,0]):\n",
