Split up xy generation

--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -653,11 +653,21 @@
    "source": [
     "xy_real_series_qsim = torch.empty((0,2)).to(device)\n",
     "#xy_est_series = torch.empty((0,2)).to(device)\n",
+    "\n",
+    "for q_real_qsim in q_series_qsim:\n",
+    "\txy_real_qsim, _ = transforms.forward_kinematics(rp, q_real_qsim)\n",
+    "\txy_real_series_qsim = torch.cat((xy_real_series_qsim, xy_real_qsim.unsqueeze(0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "xy_real_series_thsim = torch.empty((0,2)).to(device)\n",
     "\n",
-    "for (q_real_qsim, q_real_thsim) in zip(q_series_qsim, q_series_thsim):\n",
-    "\txy_real_qsim, _ = transforms.forward_kinematics(rp, q_real_qsim)\n",
-    "\txy_real_series_qsim = torch.cat((xy_real_series_qsim, xy_real_qsim.unsqueeze(0)))\n",
+    "for q_real_thsim in q_series_thsim:\n",
     "\txy_real_thsim, _ = transforms.forward_kinematics(rp, q_real_thsim)\n",
     "\txy_real_series_thsim = torch.cat((xy_real_series_thsim, xy_real_thsim.unsqueeze(0)))"
    ]
