--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -682,9 +682,6 @@
     "os.makedirs(save_dir, exist_ok=True)\n",
     "\n",
     "\n",
-    "neural_net = False\n",
-    "model_location = None\n",
-    "\n",
     "metadata = {\n",
     "\t\"timestamp\": timestamp,\n",
     "\t\"Learned transform\": neural_net,\n",
@@ -712,10 +709,10 @@
    "source": [
     "stride = 3\n",
     "pos_end_qsim, pos_elbow_qsim = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_series_qsim[::stride])\n",
-    "pos_end_thsim, pos_elbow_thsim = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_series_thsim[::stride])\n",
+    "#pos_end_thsim, pos_elbow_thsim = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_series_thsim[::stride])\n",
     "\n",
     "frames_q_qsim = plotter.frame_pendulum(pos_end_qsim, pos_elbow_qsim)\n",
-    "frames_q_thsim = plotter.frame_pendulum(pos_end_thsim, pos_elbow_thsim)\n",
+    "#frames_q_thsim = plotter.frame_pendulum(pos_end_thsim, pos_elbow_thsim)\n",
     "\n",
     "data_qsim = {\n",
     "\t\"frames\": frames_q_qsim,\n",
@@ -725,7 +722,7 @@
     "\t\"act_color\": \"tab:cyan\"\n",
     "}\n",
     "\n",
-    "\n",
+    "\"\"\"\n",
     "data_thsim = {\n",
     "\t\"frames\": frames_q_thsim,\n",
     "\t\"times\": dt,\n",
@@ -733,7 +730,7 @@
     "\t\"arm_color\": \"tab:orange\", \n",
     "\t\"act_color\": \"tab:red\"\n",
     "} \n",
-    "\n",
+    "\"\"\"\n",
     "\n",
     "ref_pos_qsim = {\n",
     "\t\"pos\": xy_des_hat,\n",
@@ -741,17 +738,17 @@
     "\t\"color\": \"tab:blue\"\n",
     "}\n",
     "\n",
-    "\n",
+    "\"\"\"\n",
     "ref_pos_thsim = {\n",
     "\t\"pos\": xy_des_hat,\n",
     "\t\"name\": \"xysim\",\n",
     "\t\"color\": \"tab:orange\"\n",
     "}\n",
+    "\"\"\"\n",
     "\n",
+    "ref_poss = [ref_pos_qsim]#, ref_pos_thsim]#, ref_pos_est]#, ref_pos_naive]\n",
     "\n",
-    "ref_poss = [ref_pos_qsim, ref_pos_thsim]#, ref_pos_est]#, ref_pos_naive]\n",
-    "\n",
-    "frames_data = [data_qsim, data_thsim]#, data_est]\n",
+    "frames_data = [data_qsim]#, data_thsim]#, data_est]\n",
     "\n",
     "name_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
     "name_ref = \"ref:(\" + str(xy_des_real[0].item()) + \",\" + str(xy_des_real[1].item()) + \")_\"\n",
@@ -772,7 +769,13 @@
     "\tfile_name = file_name[:-6] + \"_\" + str(file_counter) + \".mp4\"\n",
     "\toutput_path = os.path.join(save_dir, file_name)\n",
     "\n",
-    "plotter.animate_pendulum(frames_data, ref_poss=ref_poss, plot_actuator=True, save_path=output_path, fps = 1/(dt*stride), dt = dt*stride)\n",
+    "if neural_net == False:\n",
+    "\tvideo_title = \"Non-collocated controller, analytic coordinates\"\n",
+    "else:\n",
+    "\tvideo_title = \"Non-collocated controller, learned coordinates\"\n",
+    "\n",
+    "\n",
+    "plotter.animate_pendulum(frames_data, video_title = video_title, ref_poss=ref_poss, plot_actuator=True, save_path=output_path, fps = 1/(dt*stride), dt = dt*stride)\n",
     "#plotter.animate_pendulum(frames_data, ref_pos=None, plot_actuator=False, file_name=file_name, fps = 1/(dt*stride), dt = dt*stride)\n"
    ]
   },
