Add description of loss terms

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -215,12 +215,14 @@
     "\n",
     "\t\"\"\"\n",
     "\tLoss function for training the Autoencoder. Loss terms are the following:\n",
-    "\tl_recon:    Loss between input- and reconstructed variable. (MSE)\n",
-    "\tl_off_dia:  Loss of off-diagonal terms of mass matrix in theta-space. (MSE)\n",
-    "\tl_dia:      Loss on diagonal terms of mass matrix in theta-space. \n",
-    "\t\t\t\t(mean of normalized negative log-loss)\n",
-    "\tl_input:    Loss to drive input matrix in theta-space to [1, 0]^T (MSE)\n",
-    "\n",
+    "\tl_recon:    \tLoss between input- and reconstructed variable. (MSE)\n",
+    "\tl_diag:      \tLoss on diagonal terms of mass matrix in theta-space. \n",
+    "\t\t\t\t\t(mean of normalized negative log-loss)\n",
+    "\tl_off_dia:  \tLoss of off-diagonal terms of mass matrix in theta-space. (MSE)\n",
+    "\tl_input:    \tLoss to drive input matrix in theta-space to [1, 0]^T (MSE)\n",
+    "\tl_input_jac:\tLoss based on 1st Jacobian row similarity to A_q column\n",
+    "\tl_theta: \t\tLoss on the first coordinate theta_0, based on analytic knowledge\n",
+    "\tl_J_eye: \t\tLoss on J_enc@J_dec similarity to identity\n",
     "\t\"\"\"\n",
     "\n",
     "\n",
