--- a/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
+++ b/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
@@ -262,13 +262,13 @@
     "import torch.nn.functional as F\n",
     "\n",
     "# Need to pick weights through some optimization scheme\n",
-    "f_recon        = 10.\n",
-    "f_diag         = 1. \n",
-    "f_off_diag     = 1. \n",
-    "f_input        = 1.\n",
-    "f_input_jac    = 1.\n",
-    "f_theta        = 1.\n",
-    "f_inertia_eye  = 1. \n",
+    "w_recon\t\t\t= 4.\n",
+    "w_diag\t\t\t= 1.25\n",
+    "w_off_diag\t\t= 1.25\n",
+    "w_input \t\t= 1.\n",
+    "w_input_jac\t\t= 0.8\n",
+    "w_theta\t\t\t= 1.\n",
+    "w_J_eye \t\t= 1.\n",
     "\n",
     "\n",
     "def loss_fun(q, theta, q_hat, M_q, A_q, J_h_enc, J_h_dec):\n",
@@ -276,13 +276,13 @@
     "\t\"\"\"\n",
     "\tLoss function for training the Autoencoder. Loss terms are the following:\n",
     "\tl_recon:    \tLoss between input- and reconstructed variable. (MSE)\n",
-    "\tl_input_jac:\tLoss on jacobian based on Pustina paper for input decoupling (MSE)\n",
-    "\tl_theta: \t\tLoss on first coordinate, again based on Pustina paper (MSE) \n",
-    "\tl_off_dia:  \tLoss of off-diagonal terms of mass matrix in theta-space. (MSE)\n",
-    "\tl_dia:      \tLoss on diagonal terms of mass matrix in theta-space. \n",
+    "\tl_diag:      \tLoss on diagonal terms of mass matrix in theta-space. \n",
     "\t\t\t\t\t(mean of normalized negative log-loss)\n",
-    "\tl_input:    \tLoss to drive second input matrix term in theta-space to 0 (MSE)\n",
-    "\n",
+    "\tl_off_dia:  \tLoss of off-diagonal terms of mass matrix in theta-space. (MSE)\n",
+    "\tl_input:    \tLoss to drive input matrix in theta-space to [1, 0]^T (MSE)\n",
+    "\tl_input_jac:\tLoss based on 1st Jacobian row similarity to A_q column\n",
+    "\tl_theta: \t\tLoss on the first coordinate theta_0, based on analytic knowledge\n",
+    "\tl_J_eye: \t\tLoss on J_enc@J_dec similarity to identity\n",
     "\t\"\"\"\n",
     "\n",
     "\t\n",
@@ -296,26 +296,33 @@
     "\tM_th = J_h_inv_trans @ M_q @ J_h_inv\n",
     "\tA_th = J_h_inv_trans @ A_q\n",
     "\n",
-    "\t# FIRST LOSS: Standard reconstruction loss\n",
-    "\tl_recon = F.mse_loss(q, q_hat, reduction=\"mean\")\n",
+    "\t# 1. Standard reconstruction loss\n",
+    "\tdelta = torch.atan2(torch.sin(q-q_hat), torch.cos(q-q_hat))\n",
+    "\tl_recon = F.mse_loss(delta, torch.zeros_like(delta), reduction=\"mean\")\n",
     "\n",
-    "\t# SECOND LOSS: Inspired by Pietro Pustina's paper on input decoupling:\n",
-    "\t# https://arxiv.org/pdf/2306.07258\n",
-    "\tl_input_jac = F.mse_loss(J_h[:, 0, :], A_q[:, :, 0], reduction=\"mean\")\n",
-    "\n",
-    "\t# THIRD LOSS: On the first coordinate theta, again from Pietro Pustina's analytic formulation\n",
-    "\ttheta_ana = torch.vmap(transforms_SEA.analytic_theta, in_dims = (None, 0))(rp, q)\n",
-    "\tl_theta = F.mse_loss(theta[:, 0], theta_ana[:, 0], reduction=\"mean\")\n",
-    "\n",
-    "\t# FOURTH LOSS: Inertial decoupling, off-diagonal\n",
-    "\tl_off_diag = torch.mean((M_th[:, 0, 1])**2)\n",
-    "\n",
-    "\t# FIFTH LOSS: Inertial decoupling, diagonal\n",
+    "\t# 2. Inertial decoupling, diagonal\n",
     "\tdiag_values = torch.diagonal(M_th, dim1=1, dim2=2)\n",
     "\tl_diag = torch.mean((-1 + torch.exp(-(diag_values - 1))) * (diag_values < 1).float())  # Shape: (batch_size, 2)\n",
     "\n",
-    "\t## SIXTH LOSS: Input decoupling\n",
+    "\t# 3. Inertial decoupling, off-diagonal\n",
+    "\tl_off_diag = torch.mean((M_th[:, 0, 1])**2)\n",
+    "\n",
+    "\t# 4. Input decoupling\n",
     "\tl_input = torch.mean((A_th[:, 1]**2))\n",
+    "\n",
+    "\t# 5. Jacobian loss, inspired by Pietro Pustina's paper on input decoupling: # https://arxiv.org/pdf/2306.07258\n",
+    "\tl_input_jac = F.mse_loss(J_h[:, 0, :], A_q[:, :, 0], reduction=\"mean\")\n",
+    "\n",
+    "\t# 6. On the first coordinate theta, again from Pietro Pustina's analytic formulation\n",
+    "\ttheta_ana = torch.vmap(transforms_SEA.analytic_theta, in_dims = (None, 0))(rp, q)\n",
+    "\tl_theta = F.mse_loss(theta[:, 0], theta_ana[:, 0], reduction=\"mean\")\n",
+    "\n",
+    "\t# 7. Jacobian identity loss\n",
+    "\tl_J_eye = F.mse_loss( torch.bmm(J_h, J_h_inv), \n",
+    "\t\t\t\t\t\ttorch.eye(2,device=J_h.device).unsqueeze(0).repeat(J_h.size(0),1,1),\n",
+    "\t\t\t\t\t\treduction='mean' )\n",
+    "\n",
+    "\n",
     "\t\n",
     "\t\"\"\"\n",
     "\t# ALTERNATIVE LOSS: For inertial decoupling, error w.r.t. identity matrix. \n",
@@ -324,13 +331,10 @@
     "\tl_inertia_eye = F.mse_loss(M_th, M_eye, reduction=\"mean\")\n",
     "\t\"\"\"\n",
     "\n",
-    "\tloss_terms = torch.tensor([l_recon * f_recon, l_diag * f_diag, l_off_diag * f_off_diag, \n",
-    "\t                           l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
-    "\tloss_sum = l_recon * f_recon + l_diag * f_diag + l_off_diag * f_off_diag + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
-    "\n",
-    "\t#loss_terms = torch.tensor([l_recon * f_recon, l_inertia_eye * f_inertia_eye, \n",
-    "\t#\t\t\t\t\t\t   l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
-    "\t#loss_sum = l_recon * f_recon + l_inertia_eye * f_inertia_eye + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
+    "\tloss_terms = torch.tensor([l_recon * w_recon, l_diag * w_diag, l_off_diag * w_off_diag, \n",
+    "\t                           l_input * w_input, l_input_jac * w_input_jac, l_theta * w_theta,  l_J_eye * w_J_eye])\n",
+    "\tloss_sum = (l_recon * w_recon + l_diag * w_diag + l_off_diag * w_off_diag + l_input * w_input + \n",
+    "\t\t\t\tl_input_jac * w_input_jac + l_theta * w_theta + l_J_eye * w_J_eye)\n",
     "\n",
     "\treturn loss_sum, loss_terms"
    ]
@@ -383,13 +387,13 @@
     "\t\t\t\t\"epochs\" : num_epochs,\n",
     "\t\t\t\t\"file_name\" : nn_filename,\n",
     "\t\t\t\t\"loss_weights\": {\n",
-    "\t\t\t\t\t\"f_recon\": f_recon,\n",
-    "\t\t\t\t\t\"f_diag\": f_diag,\n",
-    "\t\t\t\t\t\"f_off_diag\": f_off_diag,\n",
-    "\t\t\t\t\t\"f_input\": f_input,\n",
-    "\t\t\t\t\t\"f_input_jac\": f_input_jac,\n",
-    "\t\t\t\t\t\"f_theta\": f_theta,\n",
-    "\t\t\t\t\t#\"f_inertia_eye\": f_inertia_eye\n",
+    "\t\t\t\t\t\"w_recon\": w_recon,\n",
+    "\t\t\t\t\t\"w_diag\": w_diag,\n",
+    "\t\t\t\t\t\"w_off_diag\": w_off_diag,\n",
+    "\t\t\t\t\t\"w_input\": w_input,\n",
+    "\t\t\t\t\t\"w_input_jac\": w_input_jac,\n",
+    "\t\t\t\t\t\"w_theta\": w_theta,\n",
+    "\t\t\t\t\t\"w_J_eye\": w_J_eye\n",
     "\t\t\t\t}}\n",
     "\tmetadata[\"architecture\"] = {\n",
     "    \"encoder\": autoencoders_SEA.summarize_sequential(model.enc),\n",
@@ -410,7 +414,7 @@
     "\t\t# Training phase\n",
     "\t\tmodel.train()\n",
     "\t\ttrain_loss = 0\n",
-    "\t\ttrain_loss_terms = torch.zeros(6)\n",
+    "\t\ttrain_loss_terms = torch.zeros(7)\n",
     "\t\tfor index, (q, M_q, A_q) in enumerate(train_dataloader):\n",
     "\t\t\tq = q.to(device)\n",
     "\t\t\tM_q = M_q.to(device)\n",
@@ -436,7 +440,7 @@
     "\t\t# Validation phase\n",
     "\t\tmodel.eval()\n",
     "\t\tval_loss = 0\n",
-    "\t\tval_loss_terms = torch.zeros(6)\n",
+    "\t\tval_loss_terms = torch.zeros(7)\n",
     "\t\twith torch.no_grad():\n",
     "\t\t\tfor index, (q, M_q, A_q) in enumerate(val_dataloader):\n",
     "\t\t\t\tq = q.to(device)\n",
