--- a/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
+++ b/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
@@ -551,14 +551,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_model_performance(model, plot_dataloader, folder_path):\n",
+    "def plot_model_performance(model, plot_dataloader, save_folder, device):\n",
     "\n",
-    "\t\"\"\"\n",
-    "\tFunction to create 3D scatter plots of model performance. \n",
-    "\t\"\"\"\n",
-    "\n",
-    "\n",
-    "\tos.makedirs(folder_path, exist_ok=True)\n",
+    "\tos.makedirs(save_folder, exist_ok=True)\n",
     "\n",
     "\tmodel.eval()\n",
     "\twith torch.no_grad():\n",
@@ -567,7 +562,6 @@
     "\t\t\tM_q = M_q.to(device)\n",
     "\t\t\tA_q = A_q.to(device)\n",
     "\n",
-    "\t\t\t\n",
     "\t\t\ttheta, J_h, q_hat, J_h_dec, J_h_ana = model(q)\n",
     "\t\t\ttheta_ana = model.theta_ana(q)\n",
     "\t\t\tJ_h_trans = torch.transpose(J_h, 1, 2)\n",
