Change plotting to 2d scatters

--- a/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
+++ b/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
@@ -577,24 +577,46 @@
     "\t\t\tM_th_ana = J_h_inv_trans_ana @ M_q @ J_h_inv_ana\n",
     "\t\t\tA_th_ana = (J_h_inv_trans_ana @ A_q).squeeze(-1)\n",
     "\n",
-    "\t\t\t\n",
-    "\t\t\tplotters_simple.plot_3d_quad(q, [theta_ana[:, 0], theta[:, 0], theta_ana[:, 1], theta[:, 1]], \"Analytic vs learned theta\", \n",
-    "\t\t\t\t\t\t\t\t\t\t [\"th0_ana\", \"th0_learned\", \"th_1_ana\", \"th_1_learned\"], \"q_0\", \"q_1\", \"th\", folder_path)\n",
-    "\t\t\t\n",
+    "\t\t\tJ_h_eye = torch.bmm(J_h, J_h_inv)\n",
+    "\t\t\tJ_h_eye_error = J_h_eye - torch.eye(2).to(device)\n",
+    "\t\t\tJ_norm = torch.norm(J_h_eye_error, \"fro\", dim=(1,2))\n",
+    "\n",
+    "\t\t\tA_th_target = torch.tensor([[1.,0.]]).repeat(A_th.size(0), 1).to(device)\n",
+    "\t\t\tA_th_norm = torch.norm(A_th - A_th_target, \"fro\", dim=(1))\n",
+    "\n",
+    "\t\t\tM_th_clamped = torch.clamp(M_th, max = 1.)\n",
+    "\t\t\tM_th_target = torch.eye(2).unsqueeze(0).expand(M_th.size(0), -1, -1).to(device)\n",
+    "\t\t\tM_th_norm = torch.norm(M_th_clamped - M_th_target, \"fro\", dim=(1,2))\n",
+    "\n",
+    "\t\t\tq_norm = torch.norm(q - q_hat, dim=1)\n",
     "\n",
     "\n",
-    "\t\t\tplotters_simple.plot_3d_double(q, [A_th[:, 0], A_th[:, 1]], \"Input decoupling\", [\"A0\", \"A1\"], \"q_0\", \"q_1\", \"A\", folder_path)\n",
+    "\t\t\tprint(\"A_th_target size:\", A_th_target.size())\n",
+    "\t\t\tprint(\"A_th_norm size:\", A_th_norm.size())\n",
+    "\n",
+    "\n",
+    "\t\t\tA_th_cpu = A_th.cpu().detach().numpy()\n",
+    "\t\t\tprint(\"Percentage of abs(A_0) > 0.8:\", 100 * np.sum(np.abs(A_th_cpu[:, 0]) > 0.8)/A_th_cpu[:, 0].size, \"%\")\n",
+    "\t\t\tprint(\"Percentage of abs(A_1) < 0.2:\", 100 * np.sum(np.abs(A_th_cpu[:, 1]) < 0.2)/A_th_cpu[:, 1].size, \"%\")\n",
     "\t\t\t\n",
-    "\t\t\tA_th = A_th.cpu().detach().numpy()\n",
-    "\t\t\tprint(\"Percentage of abs(A_0) > 0.6:\", 100 * np.sum(np.abs(A_th[:, 0]) > 0.6)/A_th[:, 0].size, \"%\")\n",
-    "\t\t\tprint(\"Percentage of abs(A_1) < 0.3:\", 100 * np.sum(np.abs(A_th[:, 1]) < 0.3)/A_th[:, 1].size, \"%\")\n",
     "\t\t\t\n",
-    "\t\t\tplotters_simple.plot_3d_quad(q, [M_th[:, 0, 0], M_th[:, 0, 1], M_th[:, 1, 0], M_th[:, 1, 1]], \"M_th vs q\", \n",
-    "\t\t\t\t\t\t\t\t\t\t [\"M_th[0,0]\", \"M_th[0,1]\", \"M_th[1,0]\", \"M_th[1,1]\"], \"q_0\", \"q_1\", \"M_th\", folder_path)\n",
     "\t\t\tM_th_cpu = M_th.cpu().detach().numpy()\n",
     "\t\t\tprint(\"Percentage of abs(M_00) > 1.0:\", 100 * np.sum(np.abs(M_th_cpu[:, 0, 0]) > 1.0)/M_th_cpu[:, 0, 0].size, \"%\")\n",
-    "\t\t\tprint(\"Percentage of abs(M_01) < 0.2:\", 100 * np.sum(np.abs(M_th_cpu[:, 0, 1]) < 0.2)/M_th_cpu[:, 0, 1].size, \"%\")\n",
-    "\t\t\tprint(\"Percentage of abs(M_11) > 1.0:\", 100 * np.sum(np.abs(M_th_cpu[:, 1, 1]) > 1.0)/M_th_cpu[:, 1, 1].size, \"%\")"
+    "\t\t\tprint(\"Percentage of abs(M_01) < 0.1:\", 100 * np.sum(np.abs(M_th_cpu[:, 0, 1]) < 0.1)/M_th_cpu[:, 0, 1].size, \"%\")\n",
+    "\t\t\tprint(\"Percentage of abs(M_11) > 1.0:\", 100 * np.sum(np.abs(M_th_cpu[:, 1, 1]) > 1.0)/M_th_cpu[:, 1, 1].size, \"%\")\n",
+    "\n",
+    "\t\t\tplotting_2d = True\n",
+    "\n",
+    "\t\t\t\n",
+    "\t\t\tif plotting_2d:\n",
+    "\t\t\t\tplotters_simple.plot_2d_single(q, J_norm, \"J identity norm terms\", \"Jacobian identity error\", r\"$q_0$\", r\"$q_1$\", r\"$\\|J_{enc}J_{dec} - I\\|_F$\", save_folder)\n",
+    "\t\t\t\tplotters_simple.plot_2d_single(q, A_th_norm, \"A_th norm terms\", r\"$\\boldsymbol{A}_{\\theta}(\\boldsymbol{\\theta})$\" + \" error\", r\"$q_0$\", r\"$q_1$\", r\"$\\|A_{\\theta} - [1, 0]^T\\|_F$\", save_folder)\n",
+    "\t\t\t\tplotters_simple.plot_2d_single(q, M_th_norm, \"M_th norm terms\", r\"$\\boldsymbol{M}_{\\theta}(\\boldsymbol{\\theta})$\" + \" error\", r\"$q_0$\", r\"$q_1$\", r\"$\\|M_{\\theta} - I_1\\|_F$\", save_folder)\n",
+    "\t\t\t\tplotters_simple.plot_2d_single(q, q_norm, \"q norm terms\", r\"$\\boldsymbol{q}$\" + \" reconstruction error\", r\"$q_0$\", r\"$q_1$\", r\"$\\|\\hat{q} - q\\|_2$\", save_folder)\n",
+    "\t\t\t\tplotters_simple.plot_2d_quad(q, [theta_ana[:, 0], theta_ana[:, 1], theta[:, 0], theta[:, 1]], \"theta vs q q-space\", \n",
+    "\t\t\t\t\t\t\t\t \t\t\t[r\"$\\theta_{0}$\" + \" - analytic\", r\"$\\theta_{1}$\" + \" - analytic\", r\"$\\theta_{0}$\" + \" - learned\", r\"$\\theta_{1}$\" + \" - learned\"], r\"$q_{0}$\", r\"$q_{1}$\", r\"$\\theta_{1}$\", save_folder)\n",
+    "\n",
+    "\t\t\t\t"
    ]
   },
   {
