--- a/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
+++ b/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
@@ -630,15 +630,15 @@
     "batch_size = 512\n",
     "train_part = 0.7\n",
     "\n",
-    "num_epochs = 1001\n",
+    "num_epochs = 3001\n",
     "lr = 1e-3\n",
     "\n",
     "# IMPORTANT:\n",
     "# If you want to train on an existing model\n",
-    "existing_model_name = \"NN_202503231956\"\n",
+    "#existing_model_name = \"NN_202503231956\"\n",
     "existing_model_name = None\n",
     "\n",
-    "plt.ion()\n",
+    "#plt.ion()\n",
     "\n",
     "current_time = datetime.now().strftime(\"%Y%m%d%H%M\")\n",
     "\n",
@@ -659,7 +659,7 @@
     "points_path = os.path.join(dir_path, \"training_points_\" + str(file_counter) + \".png\")\n",
     "points_plotter(points, save = True, file_path = points_path)\n",
     "scatter_fig_path = os.path.join(dir_path, \"loss_\" + str(file_counter) + \".png\")\n",
-    "plot_loss(train_losses, val_losses, log = False, save = True, file_path = scatter_fig_path)\n",
+    "plot_loss(train_losses, val_losses, log = True, save = True, file_path = scatter_fig_path)\n",
     "save_model(model, nn_filepath)\n",
     "print(nn_filepath)"
    ]
@@ -708,19 +708,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
+    "%matplotlib inline\n",
     "\n",
     "folder_path = os.path.join(dir_path, \"performance_plots_\" + str(file_counter))\n",
     "\n",
     "q1_split = (-torch.pi, torch.pi)\n",
-    "plt.ion()\n",
+    "#plt.ion()\n",
     "#model = autoencoders.Autoencoder_double(rp).to(device)\n",
     "#model_location = 'Models/Split_AEs/Lumped_Mass_202503051257.pth'\n",
     "#model.load_state_dict(torch.load(model_location, weights_only=True))\n",
     "plot_points = points\n",
     "plot_dataset = make_dataset(plot_points)\n",
     "plot_dataloader = make_plot_dataloader(plot_dataset)\n",
-    "plot_model_performance(model, plot_dataloader, folder_path)\n"
+    "plot_model_performance(model, plot_dataloader, folder_path, device)\n"
    ]
   }
  ],
