Add plotter and fancy settings

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -27,7 +27,15 @@
     "import Double_Pendulum.dynamics as dynamics\n",
     "import Plotting.pendulum_plot as pendulum_plot\n",
     "\n",
+    "\n",
+    "import plot_collocated as plt_col\n",
+    "\n",
     "from functools import partial\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['font.family']   = 'serif'\n",
+    "matplotlib.rcParams['font.serif']    = ['Times New Roman']\n",
+    "matplotlib.rcParams['mathtext.fontset'] = 'dejavuserif'\n",
     "\n",
     "\n",
     "\n",
