Set th and q control gains

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -69,29 +69,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# When controlling on th_0\n",
-    "#\"\"\"\n",
+    "# Controller gains in theta-space\n",
     "Kp = torch.tensor([[100., 0.], \n",
     "\t\t\t\t   [0., 0.]]).to(device)\n",
     "Kd = torch.tensor([[40., 0.], \n",
     "\t\t\t\t   [0., 0.]]).to(device)\n",
-    "#\"\"\"\n",
     "\n",
-    "# When controlling on th_1, just for testing\n",
-    "\"\"\"\n",
-    "Kp = torch.tensor([[0., 0.], \n",
-    "\t\t\t\t   [0., 100.]]).to(device)\n",
-    "Kd = torch.tensor([[0., 0.], \n",
-    "\t\t\t\t   [0., 40.]]).to(device)\n",
-    "\"\"\"\n",
+    "# Controller gains in q-space\n",
+    "Kp_naive = torch.tensor([[100., 100.]]).to(device)\n",
+    "Kd_naive = torch.tensor([[40., 40.]]).to(device)\n",
     "\n",
-    "# When controlling on both th_0 and th_1, just for testing\n",
-    "\"\"\"\n",
-    "Kp = torch.tensor([[100., 0.], \n",
-    "\t\t\t\t   [0., 10.]]).to(device)\n",
-    "Kd = torch.tensor([[40., 0.], \n",
-    "\t\t\t\t   [0., 10.]]).to(device)\n",
-    "\"\"\"\n",
+    "K_naive = torch.cat((Kp_naive, Kd_naive), dim=1).squeeze(0)\n",
     "\n",
     "#C_damp = torch.tensor([[12., 0.], [0., 12.]]).to(device)"
    ]
