--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -85,6 +85,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settling_time_threshold = 0.05\n",
+    "\n",
+    "dt = 0.01\n",
+    "t_end = 0.3\n",
+    "t_series = torch.arange(0, t_end, dt)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
