Small changes to start and desired conditions funcs

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def desired_conditions(xy_des):\n",
+    "def desired_conditions(xy_des, model):\n",
     "\tq_des = transforms.inverse_kinematics(xy_des, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "\tq_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
@@ -126,8 +126,8 @@
     "\tq_d_des_est = (model.jacobian_dec(th_des_est, clockwise=is_clockwise_des) @ th_d_des_est.T).T\n",
     "\txy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])\n",
     "\n",
-    "\tprint(\"th_des_ana:\", th_des_ana.detach().cpu().numpy()[0])\n",
-    "\tprint(\"th_des_est:\", th_des_est.detach().cpu().numpy()[0])\n",
+    "\t#print(\"xy_des:\", xy_des.detach().cpu().numpy())\n",
+    "\t#print(\"th_des_ana:\", th_des_ana.detach().cpu().numpy()[0])\n",
     "\n",
     "\treturn (q_des, q_d_des, is_clockwise_des, th_des_ana, th_d_des_ana, \n",
     "\t\t \tth_des_est, th_d_des_est, q_des_est, q_d_des_est, xy_des_est)"
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def start_conditions(xy_start):\n",
+    "def start_conditions(xy_start, model):\n",
     "\tq_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "\tq_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\tq_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
@@ -163,8 +163,8 @@
     "\tq_d_start_est = (model.jacobian_dec(th_start_est, clockwise=is_clockwise_start) @ th_d_start_est.T).T\n",
     "\txy_start_est, _ = transforms.forward_kinematics(rp, q_start_est[0])\n",
     "\n",
-    "\tprint(\"th_start_ana:\", th_start_ana.detach().cpu().numpy()[0])\n",
-    "\tprint(\"th_start_est:\", th_start_est.detach().cpu().numpy()[0])\n",
+    "\t#print(\"xy_start:\", xy_start.detach().cpu().numpy())\n",
+    "\t#print(\"th_start_ana:\", th_start_ana.detach().cpu().numpy()[0])\n",
     "\n",
     "\treturn (q_start, q_d_start, q_dd_start, is_clockwise_start, th_start_est, th_d_start_est, \n",
     "\t\t \tth_start_ana, th_d_start_ana, q_start_est, q_d_start_est, xy_start_est)"
