--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -186,10 +186,10 @@
     "def sim_collocated_nn(xy_start, xy_des, timestamp):\n",
     "\n",
     "\t(q_des, q_d_des, is_clockwise_des, th_des_ana, th_d_des_ana, \n",
-    "\t\tth_des_est, th_d_des_est, q_des_est, q_d_des_est, xy_des_est) = desired_conditions(xy_des)\n",
+    "\t\tth_des_est, th_d_des_est, q_des_est, q_d_des_est, xy_des_est) = desired_conditions(xy_des, model_nn)\n",
     "\n",
     "\t(q_start, q_d_start, q_dd_start, is_clockwise_start, th_start_est, th_d_start_est, \n",
-    "\t\tth_start_ana, th_d_start_ana, q_start_est, q_d_start_est, xy_start_est) = start_conditions(xy_start)\n",
+    "\t\tth_start_ana, th_d_start_ana, q_start_est, q_d_start_est, xy_start_est) = start_conditions(xy_start, model_nn)\n",
     "\t\n",
     "\n",
     "\n",
