Set instead of concatenate for efficiency

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -192,13 +192,15 @@
     "\t\tth_start_ana, th_d_start_ana, q_start_est, q_d_start_est, xy_start_est) = start_conditions(xy_start, model_nn)\n",
     "\t\n",
     "\n",
+    "\tnum_steps = int(t_end / dt)\n",
+    "\tth_series, th_d_series      = torch.empty((num_steps, 2)).to(device), torch.empty((num_steps, 2)).to(device)\n",
+    "\tth_ana_series, th_d_ana_series = torch.empty((num_steps, 2)).to(device), torch.empty((num_steps, 2)).to(device)\n",
+    "\tq_hat_series, q_d_hat_series = torch.empty((num_steps, 2)).to(device), torch.empty((num_steps, 2)).to(device)\n",
+    "\tq_real_series, q_d_real_series, q_dd_real_series = torch.empty((num_steps, 2)).to(device), torch.empty((num_steps, 2)).to(device), torch.empty((num_steps, 2)).to(device)\n",
+    "\tu_series = torch.empty((num_steps, 1)).to(device)\n",
+    "\ttau_q_series = torch.empty((num_steps, 2)).to(device)\n",
     "\n",
-    "\tth_series, th_d_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "\tq_hat_series, q_d_hat_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "\tq_real_series, q_d_real_series, q_dd_real_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "\tu_series = torch.empty((0,1)).to(device)\n",
-    "\ttau_q_series = torch.empty((0,2)).to(device)\n",
-    "\n",
+    "\t# Define starting conditions\n",
     "\tth = th_start_est\n",
     "\tth_d = th_d_start_est\n",
     "\n",
@@ -269,18 +271,22 @@
     "\n",
     "\t\t\"\"\" Store data for plotting \"\"\"\n",
     "\n",
-    "\t\tth_series = torch.cat((th_series, th.detach()), dim=0)\n",
-    "\t\tth_d_series = torch.cat((th_d_series, th_d.detach()), dim=0)\n",
-    "\t\t\n",
-    "\t\tq_real_series = torch.cat((q_real_series, q_real.detach()), dim=0)\n",
-    "\t\tq_d_real_series = torch.cat((q_d_real_series, q_d_real.detach()), dim=0)\n",
-    "\t\tq_dd_real_series = torch.cat((q_dd_real_series, q_dd_real.detach()), dim=0)\n",
+    "\t\tth_series[i] = th.detach()\n",
+    "\t\tth_d_series[i] = th_d.detach()\n",
     "\n",
-    "\t\tq_hat_series = torch.cat((q_hat_series, q_hat.detach()), dim=0)\n",
-    "\t\tq_d_hat_series = torch.cat((q_d_hat_series, q_d_hat.detach()), dim=0)\n",
+    "\t\tth_ana_series[i] = th_ana.detach()\n",
+    "\t\tth_d_ana_series[i] = th_d_ana.detach()\n",
     "\n",
-    "\t\tu_series = torch.cat((u_series, u.detach()), dim=0)\n",
-    "\t\ttau_q_series = torch.cat((tau_q_series, tau_q_real.T.detach()), dim=0)\n",
+    "\t\tq_real_series[i] = q_real.detach()\n",
+    "\t\tq_d_real_series[i] = q_d_real.detach()\n",
+    "\t\tq_dd_real_series[i] = q_dd_real.detach()\n",
+    "\n",
+    "\t\tq_hat_series[i] = q_hat.detach()\n",
+    "\t\tq_d_hat_series[i] = q_d_hat.detach()\n",
+    "\n",
+    "\t\tu_series[i] = u.detach()\n",
+    "\t\ttau_q_series[i] = tau_q_real.T.detach()\n",
+    "\n",
     "\n",
     "\txy_real_series = torch.empty(q_real_series.size()).to(device)\n",
     "\txy_hat_series = torch.empty(q_real_series.size()).to(device)\n",
