--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -212,7 +212,10 @@
     "\tis_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
     "\n",
-    "\tfor t in torch.arange(0, t_end, dt):\n",
+    "\t\n",
+    "\n",
+    "\n",
+    "\tfor i, t in enumerate(torch.arange(0, t_end, dt)):\n",
     "\t\tt_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
     "\t\tif torch.allclose(t, torch.floor(t)) and torch.floor(t)%5 == 0:\n",
     "\t\t\tprint(t_string)\n",
