explicitly use nn model

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -229,17 +229,17 @@
     "\t\t\tq = q_real\n",
     "\t\t\tq_d = q_d_real\n",
     "\n",
-    "\t\tth = model.encoder_vmap(q)\n",
-    "\t\tth_d = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "\t\tth = model_nn.encoder_vmap(q)\n",
+    "\t\tth_d = (model_nn.jacobian_enc(q) @ q_d.T).T\n",
     "\t\t\n",
-    "\t\tq_hat = model.decoder_vmap(th, clockwise=model_cw)\n",
-    "\t\tq_d_hat = (model.jacobian_dec(th) @ th_d.T).T\n",
+    "\t\tq_hat = model_nn.decoder_vmap(th, clockwise=model_cw)\n",
+    "\t\tq_d_hat = (model_nn.jacobian_dec(th) @ th_d.T).T\n",
     "\n",
     "\t\tis_clockwise = transforms.check_clockwise(q_hat.squeeze(0))\n",
     "\n",
     "\t\t\"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
     "\t\t\n",
-    "\t\tJ_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
+    "\t\tJ_h_inv = model_nn.jacobian_dec(th, is_clockwise).squeeze(0)\n",
     "\t\tJ_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
     "\t\tM_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q_hat.squeeze(0), q_d_hat.squeeze(0))\n",
@@ -265,11 +265,15 @@
     "\t\tq_real = q_real + q_d_real * dt\n",
     "\t\tq_real = transforms.wrap_to_pi(q_real)\n",
     "\t\t\n",
-    "\t\tth = model.encoder_vmap(q_real)\n",
-    "\t\tq_hat = model.decoder_vmap(th, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
+    "\t\tth = model_nn.encoder_vmap(q_real)\n",
+    "\t\tq_hat = model_nn.decoder_vmap(th, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
     "\t\tq_hat = transforms.wrap_to_pi(q_hat)\n",
-    "\t\tth_d = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
-    "\t\tq_d_hat = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
+    "\t\tth_d = (model_nn.jacobian_enc(q_real) @ q_d_real.T).T\n",
+    "\t\tq_d_hat = (model_nn.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
+    "\n",
+    "\t\tth_ana = model_ana.encoder_vmap(q_real)\n",
+    "\t\tth_d_ana = (model_ana.jacobian_enc(q_real) @ q_d_real.T).T\n",
+    "\n",
     "\n",
     "\n",
     "\t\t\"\"\" Store data for plotting \"\"\"\n",
