Log data into one dict, then export

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -304,11 +304,26 @@
     "\t\txy_real_series[i] = xy_real.unsqueeze(0)\n",
     "\t\txy_hat, _ = transforms.forward_kinematics(rp, q_hat)\n",
     "\t\txy_hat_series[i] = xy_hat.unsqueeze(0)\n",
-    "\t\ttheta_real = transforms.analytic_theta(rp, q_real)\n",
-    "\t\ttheta_real_series[i] = theta_real\n",
     "\n",
-    "\treturn ((th_series, th_d_series, q_real_series, q_d_real_series, q_dd_real_series, q_hat_series,\n",
-    "\t\t\tq_d_hat_series, u_series, tau_q_series, xy_real_series, xy_hat_series, theta_real_series), th_des_ana, th_start_ana)"
+    "\tnn_sim_data = {\n",
+    "\t\t\"th_s\": th_series,\n",
+    "\t\t\"th_d_s\": th_d_series,\n",
+    "\t\t\"th_ana_s\": th_ana_series,\n",
+    "\t\t\"th_d_ana_s\": th_d_ana_series,\n",
+    "\t\t\"q_real_s\": q_real_series,\n",
+    "\t\t\"q_d_real_s\": q_d_real_series,\n",
+    "\t\t\"q_dd_real_s\": q_dd_real_series,\n",
+    "\t\t\"q_hat_s\": q_hat_series,\n",
+    "\t\t\"q_d_hat_s\": q_d_hat_series,\n",
+    "\t\t\"xy_real_s\": xy_real_series,\n",
+    "\t\t\"xy_hat_s\": xy_hat_series,\n",
+    "\t\t\"u_s\": u_series,\n",
+    "\t\t\"tau_q_s\": tau_q_series\n",
+    "\t}\n",
+    "\n",
+    "\treturn (nn_sim_data, q_des, th_des_ana, th_start_ana)"
+   ]
+  },
    ]
   },
   {
