--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -324,6 +324,11 @@
     "\treturn (nn_sim_data, q_des, th_des_ana, th_start_ana)"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analytic simulation"
    ]
   },
   {
@@ -332,81 +337,126 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sims = 2\n",
-    "\n",
-    "settling_time_thsims = torch.empty(n_sims).to(device)\n",
-    "rmse_thsims = torch.empty(n_sims).to(device)\n",
-    "work_thsims = torch.empty(n_sims).to(device)\n",
-    "\n",
-    "for i in range(n_sims):\n",
-    "\n",
-    "\ttimestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
-    "\txy_des = torch.tensor([2., -2.]).requires_grad_().to(device)\n",
-    "\txy_start = torch.tensor([0., -4.]).requires_grad_().to(device)\n",
-    "\t\n",
-    "\t((th_series, th_d_series, q_real_series, q_d_real_series, q_dd_real_series, q_hat_series,\n",
-    "\t\t\tq_d_hat_series, u_series, tau_q_series, xy_real_series, xy_hat_series, theta_real_series),\n",
-    "\t\t\tth_des_ana, th_start_ana) = sim_collocated_nn(xy_start, xy_des, timestamp)\n",
-    "\t\n",
-    "\t\n",
-    "\n",
-    "\tth_distance = torch.abs(th_des_ana[0,0] - th_start_ana[0,0])\n",
-    "\tsettling_time_threshold = 0.05\n",
-    "\ttolerance = settling_time_threshold * th_distance\n",
-    "\n",
-    "\tprint(\"Tolerance distance from th_des:\", round(tolerance.item(), 5), \"[m]\")\n",
-    "\n",
-    "\tth_0_abs_error_series = torch.abs(theta_real_series[:, 0] - th_des_ana[0, 0])\n",
-    "\n",
-    "\twithin_tolerance = th_0_abs_error_series <= tolerance\n",
-    "\tfirst_match_idx = torch.nonzero(within_tolerance).squeeze()\n",
+    "def sim_collocated_ana(xy_start, xy_des, timestamp, model):\n",
     "\n",
     "\n",
+    "\t(q_des, q_d_des, is_clockwise_des, th_des_ana, th_d_des_ana, \n",
+    "\t\tth_des_est, th_d_des_est, q_des_est, q_d_des_est, xy_des_est) = desired_conditions(xy_des, model_ana)\n",
     "\n",
-    "\tif first_match_idx.numel() > 0:\n",
-    "\t\tfirst_time_idx = first_match_idx[0].item()\n",
-    "\t\ttime_to_reach = first_time_idx * dt\n",
-    "\t\tsettled_theta = theta_real_series[3*first_time_idx:, 0]\n",
-    "\t\trmse = torch.sqrt(torch.mean((settled_theta - th_des_ana[0, 0]) ** 2))\n",
-    "\t\tprint(f\"Reached within 5% tolerance at t = {time_to_reach:.2f} seconds.\")\n",
-    "\t\tprint(f\"RMSE after 3x settling time: {rmse.item():.6f} [m]\")\n",
-    "\telse:\n",
-    "\t\tprint(\"Did not reach within 5% tolerance.\")\n",
-    "\t\ttime_to_reach = torch.inf\n",
-    "\t\trmse = torch.inf\n",
+    "\t(q_start, q_d_start, q_dd_start, is_clockwise_start, th_start_est, th_d_start_est, \n",
+    "\t\tth_start_ana, th_d_start_ana, q_start_est, q_d_start_est, xy_start_est) = start_conditions(xy_start, model_ana)\n",
     "\n",
+    "\tth_ana_series, th_d_ana_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "\tq_ana_series, q_d_ana_series, q_dd_ana_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "\tq_hat_ana_series, q_d_hat_ana_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "\n",
-    "\tjoint_power_series = tau_q_series * q_d_real_series\n",
-    "\tpower_series = torch.sum(joint_power_series, dim = 1)\n",
-    "\ttotal_work = torch.sum(power_series)\n",
+    "\tu_ana_series = torch.empty((0,1)).to(device)\n",
+    "\ttau_q_ana_series = torch.empty((0,2)).to(device)\n",
     "\n",
-    "\tsettling_time_thsims[i] = time_to_reach\n",
-    "\trmse_thsims[i] = rmse\n",
-    "\twork_thsims[i] = total_work\n",
+    "\t# Define starting angles\n",
+    "\tq, q_d, q_dd = q_start, q_d_start, q_dd_start\n",
+    "\n",
+    "\tis_clockwise = False\n",
     "\n",
     "\t\n",
     "\n",
-    "\t# Time vector (same length as error series)\n",
-    "\tt_series = torch.arange(0, t_end, dt)\n",
+    "\tfor t in torch.arange(0, t_end, dt):\n",
+    "\t\tt_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
+    "\t\tif torch.allclose(t, torch.floor(t)) and torch.floor(t)%5 == 0:\n",
+    "\t\t\tprint(t_string)\n",
     "\n",
-    "\t# Detach if needed (for plotting outside torch computation graph)\n",
-    "\terror_np = th_0_abs_error_series.detach().cpu().numpy()\n",
-    "\tt_np = t_series.cpu().numpy()\n",
     "\n",
-    "\t# Plot\n",
-    "\tplt.figure(figsize=(4, 3))\n",
-    "\tplt.plot(t_np, error_np, label=r\"$|θ_{0} - θ_{0_{des}}|$\", color='tab:blue')\n",
-    "\tplt.axhline(y=tolerance.item(), color='tab:red', linestyle='--', label=\"5% Tolerance\")\n",
-    "\tplt.axvline(x=time_to_reach, color='tab:green', linestyle='--', label=\"Settling Time\")\n",
+    "\t\tth = model.encoder_vmap(q)\n",
+    "\t\tth_d = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "\t\t\n",
+    "\t\tq_hat = model.decoder_vmap(th, clockwise=model_cw)\n",
+    "\t\tq_d_hat = (model.jacobian_dec(th) @ th_d.T).T\n",
     "\n",
-    "\tplt.title(\"Absolute Error of \" + r\"$θ_0$\" + \" vs Time\")\n",
-    "\tplt.xlabel(\"Time [s]\")\n",
-    "\tplt.ylabel(\"Absolute Error [m]\")\n",
-    "\tplt.xlim(0, t_end)\n",
-    "\tplt.legend()\n",
-    "\tplt.grid(True)\n",
-    "\tplt.tight_layout()\n",
-    "\tplt.show()"
+    "\t\t\"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
+    "\t\t\n",
+    "\t\tJ_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
+    "\t\tJ_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
+    "\n",
+    "\t\tM_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q_hat.squeeze(0), q_d_hat.squeeze(0))\n",
+    "\t\tA_q_est = dynamics.input_matrix(rp, q_hat.squeeze(0))\n",
+    "\n",
+    "\n",
+    "\t\t\"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
+    "\n",
+    "\t\tM_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
+    "\t\tA_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
+    "\n",
+    "\t\tu = torch.pinverse(A_th) @ ((Kp @ (th_des_ana - th).T + Kd @ (th_d_des_ana - th_d).T))\n",
+    "\t\tu = u + torch.pinverse(A_th) @ G_th\n",
+    "\n",
+    "\t\t\"\"\" Update the real system and apply latent control input. \"\"\"\n",
+    "\n",
+    "\t\tM_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "\t\tA_q_real = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "\n",
+    "\t\ttau_q_real = A_q_real * u\n",
+    "\t\tq_dd = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d).T)- G_q_real)).T  #  - C_damp @ ((q_d_real).T) \n",
+    "\t\tq_d = q_d + q_dd * dt\n",
+    "\t\tq = q + q_d * dt\n",
+    "\t\tq = transforms.wrap_to_pi(q)\n",
+    "\t\t\n",
+    "\t\tth_ana = model.encoder_vmap(q)\n",
+    "\t\tth_d_ana = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "\n",
+    "\n",
+    "\t\t\"\"\" Store data for plotting \"\"\"\n",
+    "\n",
+    "\t\tth_ana_series = torch.cat((th_ana_series, th_ana.detach()), dim=0)\n",
+    "\t\tth_d_ana_series = torch.cat((th_d_ana_series, th_d_ana.detach()), dim=0)\n",
+    "\t\t\n",
+    "\t\tq_ana_series = torch.cat((q_ana_series, q.detach()), dim=0)\n",
+    "\t\tq_d_ana_series = torch.cat((q_d_ana_series, q_d.detach()), dim=0)\n",
+    "\t\tq_dd_ana_series = torch.cat((q_dd_ana_series, q_dd.detach()), dim=0)\n",
+    "\n",
+    "\t\tq_hat_ana_series = torch.cat((q_hat_ana_series, q_hat.detach()), dim=0)\n",
+    "\t\tq_d_hat_ana_series = torch.cat((q_d_hat_ana_series, q_d_hat.detach()), dim=0)\n",
+    "\n",
+    "\t\tu_ana_series = torch.cat((u_ana_series, u.detach()), dim=0)\n",
+    "\t\ttau_q_ana_series = torch.cat((tau_q_ana_series, tau_q_real.T.detach()), dim=0)\n",
+    "\n",
+    "\t\tprint(\"\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\txy_real_series = torch.empty(q_ana_series.size()).to(device)\n",
+    "\txy_hat_series = torch.empty(q_hat_ana_series.size()).to(device)\n",
+    "\n",
+    "\tfor i, (q_real, q_hat) in enumerate(zip(q_ana_series, q_hat_ana_series)):\n",
+    "\t\txy_real, _ = transforms.forward_kinematics(rp, q_real)\n",
+    "\t\txy_real_series[i] = xy_real.unsqueeze(0)\n",
+    "\t\txy_hat, _ = transforms.forward_kinematics(rp, q_hat)\n",
+    "\t\txy_hat_series[i] = xy_hat.unsqueeze(0)\n",
+    "\n",
+    "\tana_sim_data = {\n",
+    "\t\t\"th_s\": th_ana_series,\n",
+    "\t\t\"th_d_s\": th_d_ana_series,\n",
+    "\t\t\"q_ana_s\": q_ana_series,\n",
+    "\t\t\"q_d_ana_s\": q_d_ana_series,\n",
+    "\t\t\"q_dd_ana_s\": q_dd_ana_series,\n",
+    "\t\t\"q_hat_ana_s\": q_hat_ana_series,\n",
+    "\t\t\"q_d_hat_ana_s\": q_d_hat_ana_series,\n",
+    "\t\t\"u_ana_s\": u_ana_series,\n",
+    "\t\t\"tau_q_ana_s\": tau_q_ana_series,\n",
+    "\t\t\"xy_real_s\": xy_real_series,\n",
+    "\t\t\"xy_hat_s\": xy_hat_series,\n",
+    "\t}\n",
+    "\n",
+    "\treturn ana_sim_data\n",
+    "\n",
+    "\n",
+    "\t\t\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Naive simulation (BEING WRITTEN)"
    ]
   },
   {
